# tcp-sender

./: .gitignore  BUILD_SUMMARY.md  GITHUB_ACTIONS_GUIDE.md  QUICK_START.md  README.md  connection-manager.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
scripts/: sync-version.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_connections.sql  002_create_protocols.sql  003_create_message_history.sql  004_create_test_tables.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  connection.rs  message.rs  mod.rs  protocol.rs
src-tauri/src/database/: db.rs  mod.rs
src-tauri/src/models/: mod.rs  protocol.rs
src-tauri/src/protocol/: mod.rs
src-tauri/src/tcp/: client.rs  connection_manager.rs  mod.rs
src-tauri/src/testing/: mod.rs
src/components/: ProtocolFieldEditor.tsx  ProtocolHexPreview.tsx  ResponseViewer.tsx
src/components/Layout/: MainLayout.tsx  Sidebar.tsx
src/contexts/: ZoomContext.tsx
src/pages/: Connections.tsx  History.tsx  Home.tsx  Messages.tsx  Protocols.tsx  Testing.tsx
src/services/: connectionService.ts  messageService.ts  protocolService.ts  versionService.ts
src/types/: connection.ts  index.ts  message.ts  protocol-simple.ts  protocol.ts  test.ts
src/utils/: protocolPresets.ts
