[package]
name = "PacketForge"
version = "1.5.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tcp_sender_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[prifile.dev]
debug = false
incremental = false
overflow-checks = false

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 数据库
rusqlite = { version = "0.32", features = ["bundled"] }
# UUID生成
uuid = { version = "1.11", features = ["v4", "serde"] }
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# 错误处理
thiserror = "2.0"
anyhow = "1.0"
# 日志
log = "0.4"
env_logger = "0.11"
# Socket配置
socket2 = "0.5"

